--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="col l-6 m-6 c-12">
         <div class="videoCovid19 margin-Top center ">
                 <h2>What is Covid</h2>
-                <iframe width="400" height="300"
+                <iframe width="400" height="300" class="video"
                     src="https://www.youtube.com/embed/RdWRmGxb_38">
                 </iframe>
         </div>    
@@ -101,7 +101,7 @@
         <div class="col l-6 m-6 c-12 "> 
             <div class=" howToProtect center margin-Top ">
                 <h2>How to protect your self</h2>
-                <iframe width="400" height="300"
+                <iframe width="400" height="300" class="video"
                     src="https://www.youtube.com/embed/DCdxsnRF1Fk">
                 </iframe>
             </div>
